--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-    "name": "@kiranbandi/hapmap",
+    "name": "@kiranbandi/vaccine-map",
     "version": "0.0.2",
-    "description": "A library for visualizing haplotype data.",
-    "main": "dist/bundle/hapmap.js",
-    "repository": "git@github.com:kiranbandi/hapmap.git",
+    "description": "A library for visualizing similarity in mRNA vaccines.",
+    "main": "dist/bundle/vaccine-map.js",
     "keywords": [
         "visualization",
-        "matrix",
-        "genotype",
-        "haplotype",
-        "allele",
-        "SNPs"
+        "vaccine",
+        "mRNA",
+        "pfizer",
+        "moderna"
     ],
     "scripts": {
         "start": "webpack-dev-server --config ./build-config/webpack.config.js --watch-poll",
@@ -26,23 +24,14 @@
     "dependencies": {
         "axios": "^0.18.0",
         "d3": "^5.5.0",
-        "interactjs": "^1.9.22",
-        "jquery": "^3.5.1",
         "lodash": "^4.17.10",
-        "node-sass": "^4.14.1",
-        "phylotree": "^1.0.0-alpha.22",
-        "rc-slider": "^9.4.1",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-loading": "^2.0.3",
-        "react-redux": "^5.0.7",
-        "react-select": "^3.1.0",
-        "redux": "^4.0.0",
-        "redux-thunk": "^2.3.0"
+        "react-dom": "^16.13.1"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
+        "node-sass": "^4.14.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "babel-plugin-transform-es2015-modules-amd": "^6.22.0",
         "babel-plugin-transform-object-rest-spread": "^6.23.0",
